fixed fonts and colors

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="landing-page">
         <div>
             <h2>Alanoud Al-Rasheed</h2>
-            <p>Developer and Designer</p>
+            <p class="subtitle">Developer and Designer</p>
         </div>
     </div>
 
