--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
             <a href="#projects">Projects</a>
         </div>
     </nav>
+    <div class="topnav">
+        <a href="#home" class="active">Alanoud Al-Rasheed</a>
+        <div id="myLinks">
+            <a href="#about">About</a>
+            <a href="#education">Education</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fas fa-bars"></i>
+        </a>
+    </div>
 
     <div class="landing-page">
         <div>
@@ -64,7 +76,7 @@
         <h3 class="centered">Skills</h3>
         <div class="container">
             <div class="col-6 sm-col-12 centered">
-                <h4>Technical Skills</h4>
+                <h4 class="skills-title">Technical Skills</h4>
                 <ul class="skills-li">
                     <li>JavaScript</li>
                     <li>HTML</li>
@@ -80,7 +92,7 @@
                 </ul>
             </div>
             <div class="col-6 sm-col-12 centered">
-                <h4>Non-Technical Skills</h4>
+                <h4 class="skills-title">Non-Technical Skills</h4>
                 <ul class="skills-li">
                     <li>Photoshop</li>
                     <li>InDesign</li>
