fixed broken link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="project">
                     <div class="project-title">
                         <h4>Tic Tac Toe</h4>
-                        <a href="https://alanoudssr.github.io/project_0/" target="_blank">View Project</a>
+                        <a href="https://alanoudssr.github.io/project_0-tic-tac-toe/" target="_blank">View Project</a>
                         <br>
                         <a href="https://github.com/alanoudssr/project_0/" target="_blank">Code on Github</a>
                     </div>
