changed skills view

--- a/index.html
+++ b/index.html
@@ -75,31 +75,37 @@
     <section id="skills">
         <h3 class="centered">Skills</h3>
         <div class="container">
-            <div class="col-6 sm-col-12 centered">
-                <h4 class="skills-title">Technical Skills</h4>
+            <div class="col-12 sm-col-12 centered all-skills">
+                <!-- <h4 class="skills-title">Technical Skills</h4> -->
                 <ul class="skills-li">
-                    <li>JavaScript</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JQuery</li>
-                    <li>ReactJS</li>
-                    <li>JSON</li>
-                    <li>AJAX</li>
-                    <li>Ruby</li>
-                    <li>Ruby on Rails</li>
-                    <li>APIs</li>
-                    <li>Java</li>
+                    <li class="col-1 sm-col-12 centered">JavaScript</li>
+                    <li class="col-1 sm-col-12 centered">HTML</li>
+                    <li class="col-1 sm-col-12 centered">CSS</li>
+                    <li class="col-1 sm-col-12 centered">JQuery</li>
+                    <li class="col-1 sm-col-12 centered">ReactJS</li>
+                    <li class="col-1 sm-col-12 centered">JSON</li>
+                    <li class="col-1 sm-col-12 centered">AJAX</li>
+                    <li class="col-1 sm-col-12 centered">Ruby</li>
+                    <li class="col-1 sm-col-12 centered">Ruby on Rails</li>
+                    <li class="col-1 sm-col-12 centered">APIs</li>
+                    <li class="col-1 sm-col-12 centered">Java</li>
+                    <li class="col-1 sm-col-12 centered">Photoshop</li>
+                    <li class="col-1 sm-col-12 centered">InDesign</li>
+                    <li class="col-1 sm-col-12 centered">Illustrator</li>
+                    <li class="col-1 sm-col-12 centered">Digital Drawing</li>
+                    <li class="col-1 sm-col-12 centered">Presentation</li>
+                    <li class="col-1 sm-col-12 centered">Teamwork</li>
                 </ul>
             </div>
             <div class="col-6 sm-col-12 centered">
-                <h4 class="skills-title">Non-Technical Skills</h4>
+                <!-- <h4 class="skills-title">Non-Technical Skills</h4> -->
                 <ul class="skills-li">
-                    <li>Photoshop</li>
+                    <!-- <li>Photoshop</li>
                     <li>InDesign</li>
                     <li>Illustrator</li>
                     <li>Digital Drawing</li>
                     <li>Presentation</li>
-                    <li>Teamwork</li>
+                    <li>Teamwork</li> -->
                 </ul>
             </div>
         </div>
