changed skills size

--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
         <div class="container">
             <div class="col-12 sm-col-12 centered all-skills">
                 <!-- <h4 class="skills-title">Technical Skills</h4> -->
-                <ul class="skills-li">
-                    <li class="col-1 sm-col-6 centered">JavaScript</li>
-                    <li class="col-1 sm-col-6 centered">HTML</li>
-                    <li class="col-1 sm-col-6 centered">CSS</li>
-                    <li class="col-1 sm-col-6 centered">JQuery</li>
-                    <li class="col-1 sm-col-6 centered">ReactJS</li>
-                    <li class="col-1 sm-col-6 centered">JSON</li>
-                    <li class="col-1 sm-col-6 centered">AJAX</li>
-                    <li class="col-1 sm-col-6 centered">Ruby</li>
-                    <li class="col-1 sm-col-6 centered">Ruby on Rails</li>
-                    <li class="col-1 sm-col-6 centered">APIs</li>
-                    <li class="col-1 sm-col-6 centered">Java</li>
-                    <li class="col-1 sm-col-6 centered">Photoshop</li>
-                    <li class="col-1 sm-col-6 centered">InDesign</li>
-                    <li class="col-1 sm-col-6 centered">Illustrator</li>
-                    <li class="col-1 sm-col-6 centered">Digital Drawing</li>
-                    <li class="col-1 sm-col-6 centered">Presentation</li>
-                    <li class="col-1 sm-col-6 centered">Teamwork</li>
-                </ul>
+                <div class="skills-li">
+                    <div class="col-1 sm-col-6 centered">JavaScript</div>
+                    <div class="col-1 sm-col-6 centered">HTML</div>
+                    <div class="col-1 sm-col-6 centered">CSS</div>
+                    <div class="col-1 sm-col-6 centered">JQuery</div>
+                    <div class="col-1 sm-col-6 centered">ReactJS</div>
+                    <div class="col-1 sm-col-6 centered">JSON</div>
+                    <div class="col-1 sm-col-6 centered">AJAX</div>
+                    <div class="col-1 sm-col-6 centered">Ruby</div>
+                    <div class="col-1 sm-col-6 centered">Ruby on Rails</div>
+                    <div class="col-1 sm-col-6 centered">APIs</div>
+                    <div class="col-1 sm-col-6 centered">Java</div>
+                    <div class="col-1 sm-col-6 centered">Photoshop</div>
+                    <div class="col-1 sm-col-6 centered">InDesign</div>
+                    <div class="col-1 sm-col-6 centered">Illustrator</div>
+                    <div class="col-1 sm-col-6 centered">Digital Drawing</div>
+                    <div class="col-1 sm-col-6 centered">Presentation</div>
+                    <div class="col-1 sm-col-6 centered">Teamwork</div>
+                </div>
             </div>
             <div class="col-6 sm-col-12 centered">
                 <!-- <h4 class="skills-title">Non-Technical Skills</h4> -->
