changed skills shadow

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </ul>
             </div>
             <div class="col-6 sm-col-12">
-
+                <p class="rights">&copy; 2018 Alanoud AlRasheed. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
