changed titles style

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     </div>
 
     <section id="about">
-        <h3 class="centered">About Me</h3>
+        <!-- <h3 class="centered">About Me</h3> -->
+        <p class="sub title">Let's build something amazing together</p>
         <p>Committed to developing the world of technology beyond its current limitations, and creating things that
             excite and
             delight people. Nothing gives me greater satisfaction than working with the latest technology to make
@@ -53,10 +54,11 @@
             combines my artistic and technological skills. Interested in Web Development, Game Development, Level
             Design, and UI
             Design.</p>
+
     </section>
 
     <section id="education">
-        <h3 class="centered">Education</h3>
+        <h3 class="centered title">Education</h3>
         <div class="container">
             <div class="centered col-6 sm-col-12">
                 <img src="http://alriyadhdaily.com/img/2017/12/03/1b445ee09e2b41dbb9b160264c8708da.jpg" alt="">
@@ -73,7 +75,7 @@
     </section>
 
     <section id="skills">
-        <h3 class="centered">Skills</h3>
+        <h3 class="centered title">Skills</h3>
         <div class="container">
             <div class="col-12 sm-col-12 centered all-skills">
                 <!-- <h4 class="skills-title">Technical Skills</h4> -->
@@ -111,7 +113,7 @@
         </div>
     </section>
     <section id="projects">
-        <h3 class="centered">Latest Projects</h3>
+        <h3 class="centered title">Latest Projects</h3>
         <div class="container">
             <div class="col-6 sm-col-12 centered">
                 <div class="project">
