--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                 <div class="skills-li">
                     <div class="row col-12">
                         <div class="col-2 sm-col-4 centered"><img src="http://2ality.com/2011/10/logo-js/js.jpg" alt=""></div>
-                        <div class="col-2 sm-col-4 centered"><img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582748_960_720.png"
+                        <div class="col-2 sm-col-4 centered"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/CSS.3.svg/2000px-CSS.3.svg.png"
                                 alt=""></div>
-                        <div class="col-2 sm-col-4 centered"><img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_960_720.png"
+                        <div class="col-2 sm-col-4 centered"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/HTML5_logo_resized.svg/170px-HTML5_logo_resized.svg.png"
                                 alt=""></div>
                     </div>
                     <div class="row col-12">
